WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15480
SVG requiredFeatures broken
https://bugs.webkit.org/show_bug.cgi?id=15480
Summary
SVG requiredFeatures broken
jay
Reported
2007-10-12 14:33:34 PDT
requiredFeatures combined with switch provides a relatively easy way for the author to create workarounds. but not if it isn't supported....
Attachments
test for static support
(9.89 KB, image/svg+xml)
2007-10-12 14:34 PDT
,
jay
no flags
Details
Patch to make our feature strings match reality
(4.26 KB, patch)
2007-12-19 03:41 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
Stop claiming to support SVG feature strings we don't
(14.53 KB, patch)
2007-12-20 03:54 PST
,
Eric Seidel (no email)
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jay
Comment 1
2007-10-12 14:34:14 PDT
Created
attachment 16644
[details]
test for static support
jay
Comment 2
2007-10-12 14:37:31 PDT
the attachment renders as "RDF" however as static requires all features to be supported and font is not supported the result should be "3" as per mozilla... opera does support font and displays the glyph for background of the new SVG logo
Eric Seidel (no email)
Comment 3
2007-10-14 00:56:32 PDT
Interesting. This shows two bugs. 1. We shouldn't be claiming to support "static" when we don't support fonts. 2. We are rendering the contents of <title> elements, which we should not do.
Eric Seidel (no email)
Comment 4
2007-11-05 18:17:50 PST
Ah! We're not rendering <title> elements, it's being used by a tref. So the only bug here is that hasFeature reports too many features for WebKit (since we don't support SVG fonts).
Eric Seidel (no email)
Comment 5
2007-12-19 03:41:27 PST
Created
attachment 17986
[details]
Patch to make our feature strings match reality This patch should make our feature strings match reality. I've not yet run the layout tests to get an updated patch for those yet.
Eric Seidel (no email)
Comment 6
2007-12-19 03:51:15 PST
Of course whenever Niko's font patch lands, we'll have to re-enable a bunch of these strings again!
Eric Seidel (no email)
Comment 7
2007-12-20 03:54:00 PST
Created
attachment 18004
[details]
Stop claiming to support SVG feature strings we don't LayoutTests/ChangeLog | 16 +++++++ .../W3C-SVG-1.1/struct-cond-03-t-expected.checksum | 2 +- .../svg/W3C-SVG-1.1/struct-cond-03-t-expected.png | Bin 12813 -> 7287 bytes .../svg/W3C-SVG-1.1/struct-cond-03-t-expected.txt | 10 +---- .../struct-image-02-b-expected.checksum | 2 +- .../svg/W3C-SVG-1.1/struct-image-02-b-expected.png | Bin 50516 -> 50517 bytes .../svg/W3C-SVG-1.1/struct-image-02-b-expected.txt | 9 ++-- LayoutTests/svg/custom/svg-features-expected.txt | 26 ++++++------ WebCore/ChangeLog | 11 +++++ WebCore/dom/DOMImplementation.cpp | 44 +++++++++++-------- 10 files changed, 73 insertions(+), 47 deletions(-)
Nikolas Zimmermann
Comment 8
2007-12-20 06:27:09 PST
Comment on
attachment 18004
[details]
Stop claiming to support SVG feature strings we don't Good work, r=me. Hopefully we can reeanble some soon....
Eric Seidel (no email)
Comment 9
2007-12-27 01:33:05 PST
Landed as
r28891
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug