2007-12-20  Eric Seidel  <eric@webkit.org>

Reviewed by Nikolas Zimmermann.

        WebKit claims to support SVG feature strings it shouldn't
        http://bugs.webkit.org/show_bug.cgi?id=15480

        * dom/DOMImplementation.cpp:
        (WebCore::isSVG10Feature):
        (WebCore::isSVG11Feature):


Canonical link: https://commits.webkit.org/22746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28891 268f45cc-cd09-0410-ab3c-d52691b4dbfc